- Some inputs for the time shifting given - Some layouting - Update URLs fixed

--- a/src/ui/EstimationShiftView.css
+++ b/src/ui/EstimationShiftView.css
@@ -1,13 +1,14 @@
-.container {
+.estimationShiftContainer {
     display: flex;
 }
 
-.estimationView {
-    margin-left: 1em;
+.estimationShiftCardContainer {
+    margin: 0.5em;
     display: flex;
     flex-direction: column;
 }
 
-.estimationView label {
+.estimationShiftContainer label {
     font-weight: bold;
+    align-self: flex-end;
 }
